# STM32_Template

./: .mxproject  CMakeLists.txt  FanController.ioc  README.md
Core/Inc/: comp.h  dac.h  main.h  opamp.h  stm32g4xx_it.h  tim.h
Core/Src/: adc.c  comp.c  dac.c  fdcan.c  gpio.c  main.c  opamp.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tim.c
cmake/stm32cubemx/: CMakeLists.txt
